app-deployments/hello-world-app/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-hello-web
  namespace: hello-web
spec:
  stripPrefix:
    prefixes:
      - /hello
