app-deployments/hello-world-app/oauth2-proxy-alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: hello-web
spec:
  type: ExternalName
  externalName: oauth2-proxy.auth.svc.cluster.local
  ports:
    - name: http
      port: 4180
