app-deployments/hello-world-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-nginx
  namespace: hello-web
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: hello-nginx
