app-deployments/hello-world-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-nginx
  namespace: hello-web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: >-
      auth-oauth2-proxy-errors@kubernetescrd,
      auth-oauth2-proxy-auth@kubernetescrd,
      hello-web-strip-hello-web@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - xtemplate.tail9d78f5.ts.net
  rules:
    - host: xtemplate.tail9d78f5.ts.net
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-nginx
                port:
                  name: http
